--- a/react-guide/src/Person/Person.css
+++ b/react-guide/src/Person/Person.css
@@ -1,8 +1,8 @@
-.Person {
+/* .Person {
   width: 50%;
   margin: 16px auto;
   padding: 16px;
   text-align: center;
   border: 1px solid #eee;
   box-shadow: 0 2px 3px #ccc;
-}
+} */
